# minecraft-clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: FragmentShader.glsl  VertexShader.glsl
src/: Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Directions.h  Game.cpp  Game.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  blkBitOperations.h  main.cpp
src/include/: FastNoiseLite.h
src/utils/: File.cpp  File.h  Logs.h  Timer.cpp  Timer.h
